# AITune

./: README.md  pyproject.toml  requirements.txt
src/: config.py  images_separetion.py  main.py  start_model.py
