[tool.poetry]
name = "aitune"
version = "0.1.0"
description = ""
authors = ["IvanIsak2000 <vingving648@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discogs-client = "^2.3.0"
django = "^4.2.4"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
sklearn = "^0.0.post7"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
